# nexus

./: .gitignore  AGENTS.md  DATA_VISUALIZATION_ARCHITECTURE.md  DESIGN_SYSTEM_PHILOSOPHY.md  MOBILE_DESKTOP_ARCHITECTURE.md  MOBILE_SETUP.md  README.md  TAURI_SETUP_GUIDE.md  app.json  babel.config.js  build_log.txt  context.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
app/: _layout.tsx  index.tsx
app/acao/: index.tsx
app/auth/: login.tsx
app/financa/: index.tsx
app/mente/: index.tsx
app/saude/: index.tsx
app/settings/: index.tsx
app/vida/: index.tsx
apps/client/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
context/: 01.md  02.md  03.md
docs/: DATA_ARCHITECTURE.md
docs/context/: architecture.txt  nexus-model-v1.json  product.txt
docs/modules/: IMPLEMENTATION_GUIDE.md  MODULE_STRUCTURE.md
docs/roadmap/: migration-status.md
src/: App.svelte  App.tsx  app.css  index.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/app/: _layout.tsx  index.tsx
src/components/: Layout.tsx  ThemeSelector.tsx
src/data/: mockHome.ts  mockModules.ts
src/design/: colors.ts  index.ts  radius.ts  shadows.ts  spacing.ts  theme.ts  typography.ts
src/lib/: backend.ts  supabase.ts  utils.ts
src/pages/: Actions.tsx  Dashboard.tsx  Events.tsx  Goals.tsx  Knowledge.tsx  Reflections.tsx  Routines.tsx  StateTracker.tsx
src/routes/: Habitos.svelte  (+4 more)
supabase/: README.md
(+478 files in other folders)
